--- a/MasterM tries/changecolor.css
+++ b/MasterM tries/changecolor.css
@@ -16,7 +16,7 @@ html {
 
 .circle-small {
   float:left;
-  background-color: white;
+  background-color: gray;
   box-shadow: 2px 2px 5px black;
   margin: 17px 5px 5px;
   height: 10px;
@@ -56,7 +56,7 @@ html {
 .blue {
   border: 1px solid #000080;
   background-color: #0000ff;
-  box-shadow: 1px 1px 5px #0000cc;
+  box-shadow: 1px 1px 3px #0000cc;
   transition: 0.5s;
   transform: scale(1.1);
 }
@@ -64,7 +64,7 @@ html {
 .red {
   border: 1px solid #990000;
   background-color: red;
-  box-shadow: 1px 1px 5px #cc0000;
+  box-shadow: 1px 1px 3px #cc0000;
   transition: 0.5s;
   transform: scale(1.1);
 }
@@ -72,7 +72,7 @@ html {
 .yellow {
   border: 1px solid #ffdb4d;
   background-color: yellow;
-  box-shadow: 1px 1px 5px #ffcc00;
+  box-shadow: 1px 1px 3px #ffcc00;
   transition: 0.5s;
   transform: scale(1.1);
 }
@@ -80,7 +80,7 @@ html {
 .green {
   border: 1px solid #006600;
   background-color: #00ff00;
-  box-shadow: 1px 1px 5px #009900;
+  box-shadow: 1px 1px 3px #009900;
   transition: 0.5s;
   transform: scale(1.1);
 }
@@ -88,7 +88,7 @@ html {
 .purple {
   border: 1px solid #600080;
   background-color: #bf00ff;
-  box-shadow: 1px 1px 5px #39004d;
+  box-shadow: 1px 1px 3px #39004d;
   transition: 0.5s;
   transform: scale(1.1);
 }
@@ -96,7 +96,7 @@ html {
 .brown {
   border: 1px solid #261a0d;
   background-color: #996633;
-  box-shadow: 1px 1px 5px  #604020;
+  box-shadow: 1px 1px 3px  #604020;
   transition: 0.5s;
   transform: scale(1.1);
 }
